# breadboard

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  README.md  annotated.html  annotated.js  base__node_8h.html  base__node_8h_source.html  breadboard_api_reference.html  breadboard_guide_building.html  breadboard_guide_building_android.html  breadboard_guide_building_linux.html  breadboard_guide_building_osx.html  breadboard_guide_building_windows.html  breadboard_guide_events.html  breadboard_guide_graphs.html  breadboard_guide_modules.html  breadboard_guide_nodes.html  breadboard_guide_overview.html  breadboard_readme.html  classbreadboard_1_1_base_node-members.html  classbreadboard_1_1_base_node.html  classbreadboard_1_1_base_node.js  classbreadboard_1_1_graph-members.html  classbreadboard_1_1_graph.html  classbreadboard_1_1_graph.js  classbreadboard_1_1_graph_factory-members.html  classbreadboard_1_1_graph_factory.html  classbreadboard_1_1_graph_factory.js  classbreadboard_1_1_graph_state-members.html  classbreadboard_1_1_graph_state.html  classbreadboard_1_1_graph_state.js  classbreadboard_1_1_module-members.html  classbreadboard_1_1_module.html  classbreadboard_1_1_module.js  classbreadboard_1_1_module_registry-members.html  classbreadboard_1_1_module_registry.html  classbreadboard_1_1_module_registry.js  classbreadboard_1_1_node_arguments-members.html  (+87 more)
disttools/: config.json
docs/src/: api_reference.md  doxyfile  doxygen_layout.xml  index.md
docs/src/programmers_guide/: overview.md
docs/src/programmers_guide/building/: building.md  building_android.md  building_linux.md  building_osx.md  building_windows.md
docs/src/programmers_guide/howto/: events.md  graphs.md  modules.md  nodes.md
include/breadboard/: base_node.h  event.h  event_system.h  graph.h  graph_factory.h  graph_state.h  log.h  memory_buffer.h  module.h  module_registry.h  node.h  node_arguments.h  node_signature.h  type.h  type_registry.h  version.h
include/breadboard/modules/: common.h  debug.h  logic.h  math.h  string.h
include/event/: base_node.h  event.h  event_listener.h  event_manager.h  event_payload.h  event_system.h  graph.h  graph_factory.h  graph_loader.h  graph_state.h  io.h  log.h  memory_buffer.h  module.h  node.h  node_arguments.h  node_def.h  node_interface.h  node_signature.h  type.h  type_registry.h
jni/: Android.mk  Application.mk  android_config.mk
module_library/include/module_library/: animation.h  audio.h  common.h  debug.h  default_graph_factory.h  default_graph_factory.inc  entity.h  logic.h  math.h  physics.h  rendermesh.h  string.h  transform.h  vec.h  vec3.h
module_library/jni/: Android.mk  Application.mk  android_config.mk
module_library/schemas/: common_modules.fbs  corgi_module.fbs  mathfu_module.fbs  pindrop_module.fbs
module_library/src/: animation.cpp  audio.cpp  entity.cpp  physics.cpp  rendermesh.cpp  transform.cpp  vec.cpp  vec3.cpp
module_library/src/module_library/: animation.cpp  audio.cpp  common.cpp  debug.cpp  entity.cpp  logic.cpp  math.cpp  physics.cpp  string.cpp  transform.cpp  vec3.cpp
samples/: CMakeLists.txt  README_BUILDING.txt
samples/event_counter/: AndroidManifest.xml  CMakeLists.txt  event_counter.cpp
samples/event_counter/jni/: Android.mk  Application.mk
samples/event_counter/res/values/: strings.xml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  files_0.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+18 more)
src/: base_node.cpp  event.cpp  event_manager.cpp  event_system.cpp  graph.cpp  graph_factory.cpp  graph_loader.cpp  graph_state.cpp  log.cpp  module.cpp  node.cpp  node_arguments.cpp  node_def.cpp  node_signature.cpp  type_registry.cpp
src/breadboard/: event.cpp  event_system.cpp  graph.cpp  graph_factory.cpp  graph_state.cpp  log.cpp  module.cpp  module_registry.cpp  node.cpp  node_arguments.cpp  node_signature.cpp  type_registry.cpp  version.cpp
src/modules/: common.cpp  debug.cpp  logic.cpp  math.cpp  string.cpp
